creusot/tests/should_fail/prusti/logic/home_mismatch2.stderr
error[creusot]: X@'x cannot be moved to 'y since it isn't copy
                caused by return type mismatch
 --> home_mismatch2.rs:6:5
  |
6 |     x
  |     ^

error: aborting due to previous error

